--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -6,8 +6,22 @@
     <div class="form-grid-2 mb-4">
       <div>
         <h5 class="mb-2">Información del paquete</h5>
-        <p>El paquete no debe superar los <span class="h6">5kg</span> y las dimensiones de <span
-            class="h6">30x30x30cm</span>.</p>
+        <p>Los tamaños aceptados del paquete, que no debe superar los <span class="h6">5kg</span> y las dimensiones de:</p>
+        <div class="list__group mt-2">
+            <p class="list__item">
+                <i class="bx bx-check bx-sm text-success"></i>
+                <span>Pequeño: de 10x10x10cm</span>
+            </p>
+            <p class="list__item">
+                <i class="bx bx-check bx-sm text-success"></i>
+                <span>Mediano: de 20x20x20cm</span>
+            </p>
+            <p class="list__item">
+                <i class="bx bx-check bx-sm text-success"></i>
+                <span>Grande: de 30x30x30cm</span>
+            </p>
+            </p>
+        </div>
       </div>
     </div>
     <div class="form-grid-2">
