--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -24,11 +24,13 @@
                     </div>
                 </div>
                 <div class="form-modal">
-                    <p>Hola, Somos CuyClick, una manera segura y rápida de realizar tus envíos. A continuación te dejaremos nuestro tarifario, según kilometraje a recorrer:</p>
+                    <p>Hola, Somos CuyClick,</p>
+                    <p>Una manera segura y rápida de realizar tus envíos.</p>
+                    <p>A continuación te dejaremos nuestro tarifario, según kilometraje a recorrer:</p>
                     <div class="list__group mt-2">
                         <p class="list__item">
                             <i class="bx bx-check bx-sm text-success"></i>
-                            <span>DE OKM A 13KM S/10.00</span>
+                            <span>DE OKM A 15KM S/10.00</span>
                         </p>
                         <p class="list__item">
                             <i class="bx bx-check bx-sm text-success"></i>
