--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <div class="sidebar-header">
-        <img src="{% static 'img/logo.png' %}" alt="Cuy Click - Perú" class="logo">
+        <img src="{% static 'img/logo.png' %}" width="120" alt="Cuy Click - Perú" class="logo">
     </div>
     <ul class="sidebar-menu">
         {% for menu in menu_list %}
