--- a/orders/templates/orders/assign/report/origins.html
+++ b/orders/templates/orders/assign/report/origins.html
@@ -6,32 +6,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte de recojo de pedidos</title>
     <style>
+        .header{
+           margin-bottom: 30px;
+        }
        .logo{
-           margin-bottom: 20px;
+           width: 120px;
        } 
-       table {
+       .title{
+           font-size: x-large;
+       }
+       .table-content {
            border: 1px solid rgb(230, 230, 230);
        }
-       table tr{
-           padding: 3px 2px;
+       .table-content thead tr{
+           padding: 5px 13px;
+       }
+       .table-content tbody tr{
+           padding: 10px 12px;
+       }
+       .text-center{
+           text-align: center;
+       }
+       .text-left{
+           text-align: left;
+       }
+       .text-right{
+           text-align: right;
+       }
+       .text-muted{
+           color:rgb(75, 75, 75);
+       }
+       .font-medium{
+            font-weight: 500;
+       }
+
+       .driver{
+            font-size: 12px;
+       }
+       .tracking-code{
+           color:rgb(75, 75, 75);
+       }
+       p{
+           margin: 0;
+           padding: 0;
+           font-size: 11px;
        }
     </style>
 </head>
 <body>
-    <img src="{{ logo }}" class="logo" />
-    <p>{{ query }}</p>
-    <table>
+    <table class="header">
+        <tr>
+            <td>
+                <img src="{{ logo }}" class="logo" />
+            </td>
+            <td>
+                <h2 class="title text-center">Lista de recojos</h2>
+            </td>
+            <td>
+                <p class="text-right">{{ date }}</p>
+            </td>
+        </tr>
+    </table>
+    <table class="table-content">
         <thead>
             <tr>
-                <th>Motorizado</th>
-                <th>detail</th>
+                <th>Detalle del pedido</th>
+                <th>Dirección de recojo</th>
+                <th>¿Quién te atenderá? </th>
             </tr>
         </thead>
         <tbody>
             {% for origin in origins %}
             <tr>
-                <td>{{ origin.driver.full_name }}</td>
-                <td>{{ origin.detail.get_tracking_code_text }}</td>
+                <td>
+                    <p class="tracking-code">{{ origin.detail.get_tracking_code_text }}</p>
+                    <p class="text-muted">Motorizado</p>
+                    <p class="driver">
+                        {{ origin.driver.full_name }}
+                    </p>
+                </td>
+                <td>
+                    <p class="driver">{{ origin.detail.address_origin.address }}</p>
+                    <p class="text-muted">
+                        {{ origin.detail.address_origin.address_city }}
+                    </p>
+                    <p class="text-muted"># puerta/Mz/Piso: {{ origin.detail.address_origin.address_detail }}</p>
+                    <p class="text-muted">
+                        Referencia: {{ origin.detail.address_origin.reference }}
+                    </p>
+                </td>
+                <td>
+                    <p class="driver">{{ origin.detail.address_origin.full_name }}</p>
+                    <p class="text-muted">Celular</p>
+                    <p class="text-muted">
+                        {{ origin.detail.address_origin.cell_phone }}
+                    </p>
+                    <p class="text-muted">Nota: {{ origin.detail.description }}</p>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
