--- a/courier_app/static/css/helpers/typography.css
+++ b/courier_app/static/css/helpers/typography.css
@@ -86,13 +86,13 @@ p, .text-base{
 }
 
 .text-center{
-    text-align: center;
+    text-align: center !important;
 }
 .text-left{
-    text-align: left;
+    text-align: left !important;
 }
 .text-right{
-    text-align: right;
+    text-align: right !important;
 }
 
 .text-capitalize{
