--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -10,15 +10,15 @@
         <div class="list__group mt-2">
             <p class="list__item">
                 <i class="bx bx-check bx-sm text-success"></i>
-                <span>Pequeño: de 10x10x10cm</span>
+                <span>PEQUEÑO hasta 10x10x10 cm – 1kg</span>
             </p>
             <p class="list__item">
                 <i class="bx bx-check bx-sm text-success"></i>
-                <span>Mediano: de 20x20x20cm</span>
+                <span>MEDIANO hasta 20x20x20 cm – 3kg</span>
             </p>
             <p class="list__item">
                 <i class="bx bx-check bx-sm text-success"></i>
-                <span>Grande: de 30x30x30cm</span>
+                <span>GRANDE hasta 30x30x30 cm – 5kg</span>
             </p>
             </p>
         </div>
