--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -25,8 +25,8 @@
                 </div>
                 <div class="form-modal">
                     <p>Hola, Somos CuyClick,</p>
-                    <p>Una manera segura y rápida de realizar tus envíos.</p>
-                    <p>A continuación te dejaremos nuestro tarifario, según kilometraje a recorrer:</p>
+                    <p>una manera rápida y segura de realizar tus envíos</p>
+                    <p>A continuación, te dejaremos nuestro tarifario, según kilometraje a recorrer:</p>
                     <div class="list__group mt-2">
                         <p class="list__item">
                             <i class="bx bx-check bx-sm text-success"></i>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="right">
-        <a href="{% url 'orders:create-detail' %}" class="btn btn-link btn-small">
+        <a href="{% url 'orders:create-detail' %}" class="btn btn-primary btn-small">
             <i class="bx bx-location-plus bx-sm"></i>
             <span>Agregar dirección</span>
         </a>
