--- a/courier_app/static/css/pages/dashboard.css
+++ b/courier_app/static/css/pages/dashboard.css
@@ -1,3 +1,70 @@
-.dash-count{
-    
+.grid-dash__driver{
+    margin-top: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 32%;
+    gap: 15px;
+}
+.grid-dash__driver h4{
+    font-size: 15px;
+}
+.icon__position{
+   display: flex;
+   align-items: center; 
+   justify-content: center;
+   margin-bottom: 15px;
+}
+.detail__now{
+    display: grid;
+    gap: 8px;
+}
+.count__now{
+    background: rgb(var(--accent-color));
+    border-radius: 16px;
+    padding: 10px 12px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.count__now h4{
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
+.count__now p{
+    color: white;
+    font-size: 10px;
+}
+.card__order{
+    background: rgb(var(--secondary-color));
+    border-radius: 16px;
+    padding: 10px 12px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card__order__head{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.card__order__head .icon{
+    background: #FF9253 !important;
+}
+.card__order__head .icon img{
+    filter: invert(1);
+    width: 18px;
+    height: 18px;
+}
+.card__order h4{
+    color: white;
+    font-size: 18px;
+}
+.card__order p{
+    color: white;
+    font-size: 10px;
+    line-height: 1.5;
+    font-weight: 400;
 }
