--- a/courier_app/static/css/pages/email.css
+++ b/courier_app/static/css/pages/email.css
@@ -33,6 +33,7 @@ p{
     margin-bottom: 10px;
     color: rgba(0, 0, 0, .7);
     line-height: 1.5;
+    font-size: 15px;
 }
 h5{
     font-weight: bold;
