--- a/courier_app/static/css/styles.css
+++ b/courier_app/static/css/styles.css
@@ -33,8 +33,10 @@
 @import 'pages/admin-content.css';
 @import 'pages/auth.css';
 @import 'pages/client-list.css';
+@import 'pages/dashboard.css';
 @import 'pages/home.css';
 @import 'pages/order-create.css';
 @import 'pages/order-list.css';
 @import 'pages/profile.css';
+@import 'pages/payment-method.css';
 @import 'pages/valoration.css';
